# super-funicular

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: __init__.py  main.py  schemas.py
data/: sample_850.edi  sample_config.json  sample_orders.csv
docs/: EDI_INTEGRATION.md  EXTENSION.md  OUTREACH_EMAIL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  vite-env.d.ts
frontend/src/api/: chat.ts  client.ts
frontend/src/components/: ChatMessage.tsx  ChatTab.tsx  DataSourcesFlow.tsx  EdiSamplePanel.tsx  FileUpload.tsx  ForecastChart.tsx  ForecastTab.tsx  Layout.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  input.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: useChatStream.ts  useTutorial.ts
src/cpg_forecast/: __init__.py  agent.py  cli.py  config.py  etl.py  forecast.py  inventory.py  llm.py  viz.py
src/cpg_forecast/sources/: __init__.py  base.py  csv_source.py  edi_source.py  shopify_source.py
tests/: __init__.py  test_api_forecast.py  test_edi_source.py  test_etl.py  test_forecast.py  test_inventory.py  test_sources.py
